[tool.poetry]
name = "repl_python3_CaudaDeRaposa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
lxml = "^4.5.2"
bs4 = "^0.0.1"
mechanize = "^0.4.5"
selenium = "^3.141.0"
flask = "^1.1.2"
PyNaCl = "^1.4.0"
replit = "^2.0.0"
google-api-python-client = "^1.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
